unpackaged/main/default/objects/Activity/fields/Create_Deal__c.field-meta.xml
<CustomField>
    <fullName>Create_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Deal</label>
    <type>Checkbox</type>
</CustomField>