unpackaged/main/default/objects/Activity/fields/Is_External_Event__c.field-meta.xml
<CustomField>
    <fullName>Is_External_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is External Event</label>
    <type>Checkbox</type>
</CustomField>