unpackaged/main/default/objects/Activity/fields/Related_Associations__c.field-meta.xml
<CustomField>
    <fullName>Related_Associations__c</fullName>
    <label>Related Associations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>